# tf-ssgan

./: .flake8  .pre-commit-config.yaml  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python_workflow.yml
ganbert/: __main__.py  constants.py  ganbert_requirements.txt  model_components.py
ganbert/results/: ganbert_scores.csv  sequential_scores.csv
ganbert/saved_models/: checkpoint  ganbert.data-00000-of-00001  ganbert.index  sequential.data-00000-of-00001  sequential.index
results/: ganbert_scores.csv  sequential_scores.csv
saved_models/: gan.data-00000-of-00001  gan.index  ganbert.data-00000-of-00001  ganbert.index  sequential.data-00000-of-00001  sequential.index
src/: bert.py  constants.py  data.py  discriminator.py  ganbert.py  generator.py  main.py  model_components.py  training.py  training_config.py
tf_ssgan/: __init__.py  losses.py  ssgan.py
