[tool.poetry]
name = "tf-ssgan"
version = "0.1.0"
description = "Semi-supervised generative adversarial classifier via a simple Keras API."
authors = ["Connor McCarthy <mccarthy.connor.james@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/connor-mccarthy/<repo-name>"
keywords = []

[tool.poetry.dependencies]
python = ">=3.8.10,<4.0"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pre-commit = "^2.10.1"
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88